# wick

./: Cargo.toml  Makefile  README.md
.github/workflows/: build-publish-snap.yaml  rust.yml
snap/: snapcraft.yaml
src/: cli.rs  config.rs  main.rs  utils.rs
src/commands/: call.rs  keygen.rs  mod.rs  publish.rs  register.rs  subscribe.rs
